# rust-api-template

./: .env  Cargo.toml  compose.yml  setup-guide.md
configs/: Cargo.toml
configs/src/: lib.rs
db/: Cargo.toml
db/src/: user_repo.rs
handlers/: Cargo.toml
handlers/src/: user_handler.rs
migrations/: 20250503081522_start.down.sql  20250503081522_start.up.sql
models/: Cargo.toml
services/: Cargo.toml
services/src/: user_service.rs
src/: config.rs  main.rs  state.rs
src/db/: user_repo.rs
src/handlers/: user_handler.rs
src/models/: user.rs
src/services/: user_service.rs
states/: Cargo.toml
states/src/: lib.rs
